// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-edvVIM gplcsU"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-bRBteW fXvcIG"
      tabindex="0"
    >
      <span
        class="sc-jvDgNt loaLja"
      >
        <i
          aria-hidden="true"
          class="sc-hjIEjD SNIZG"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hjIEjD SNIZG"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-kIBtVG hVKAaN"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hjIEjD SNIZG"
    >
      : 
    </i>
    <span
      class="sc-kubIlH eOQFbV"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-edvVIM gplcsU"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-bRBteW fXvcIG"
      tabindex="0"
    >
      <span
        class="sc-jvDgNt loaLja"
      >
        <i
          aria-hidden="true"
          class="sc-hjIEjD SNIZG"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hjIEjD SNIZG"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-kIBtVG hVKAaN"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hjIEjD SNIZG"
    >
      : 
    </i>
    <span
      class="sc-kubIlH eOQFbV"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-edvVIM gplcsU"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-bRBteW fXvcIG"
      tabindex="0"
    >
      <span
        class="sc-jvDgNt loaLja"
      >
        <i
          aria-hidden="true"
          class="sc-hjIEjD SNIZG"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hjIEjD SNIZG"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-kIBtVG hVKAaN"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hjIEjD SNIZG"
    >
      : 
    </i>
    <span
      class="sc-kubIlH eOQFbV"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-gHmoSK kRelkX sc-gYEWkn iSSmXP"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-djMJHV upVlS"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-edvVIM gplcsU"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-bRBteW fXvcIG"
      tabindex="0"
    >
      <span
        class="sc-jvDgNt loaLja"
      >
        <i
          aria-hidden="true"
          class="sc-hjIEjD SNIZG"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hjIEjD SNIZG"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-kIBtVG hVKAaN"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hjIEjD SNIZG"
    >
      : 
    </i>
    <span
      class="sc-kubIlH eOQFbV"
    >
      hey
       
      <span
        class="sc-gHmoSK kRelkX sc-gYEWkn iSSmXP"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-djMJHV upVlS"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-gHmoSK kRelkX sc-gYEWkn iSSmXP"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-djMJHV upVlS"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-edvVIM gplcsU"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-bRBteW fXvcIG"
      tabindex="0"
    >
      <span
        class="sc-jvDgNt loaLja"
      >
        <i
          aria-hidden="true"
          class="sc-hjIEjD SNIZG"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hjIEjD SNIZG"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-kIBtVG hVKAaN"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hjIEjD SNIZG"
    >
      : 
    </i>
    <span
      class="sc-kubIlH eOQFbV"
    >
      hey
       
      <span
        class="sc-gHmoSK kRelkX sc-gYEWkn iSSmXP"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-djMJHV upVlS"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-edvVIM gplcsU"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-bRBteW fXvcIG"
      tabindex="0"
    >
      <span
        class="sc-jvDgNt loaLja"
      >
        <i
          aria-hidden="true"
          class="sc-hjIEjD SNIZG"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hjIEjD SNIZG"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-kIBtVG hVKAaN"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hjIEjD SNIZG"
    >
      : 
    </i>
    <span
      class="sc-kubIlH eOQFbV"
    >
      <span
        class="sc-gHmoSK kRelkX sc-gYEWkn iSSmXP"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-djMJHV upVlS"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-edvVIM gplcsU"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-bRBteW fXvcIG"
      tabindex="0"
    >
      <span
        class="sc-jvDgNt loaLja"
      >
        <i
          aria-hidden="true"
          class="sc-hjIEjD SNIZG"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hjIEjD SNIZG"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-kIBtVG hVKAaN"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hjIEjD SNIZG"
    >
      : 
    </i>
    <span
      class="sc-kubIlH eOQFbV"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-gHmoSK kRelkX sc-gYEWkn iSSmXP"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-djMJHV upVlS"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-edvVIM fWhYHX"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-bRBteW fXvcIG"
      tabindex="0"
    >
      <span
        class="sc-jvDgNt loaLja"
      >
        <i
          aria-hidden="true"
          class="sc-hjIEjD SNIZG"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hjIEjD SNIZG"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-kIBtVG hVKAaN"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hjIEjD SNIZG"
    >
      : 
    </i>
    <span
      class="sc-kubIlH eOQFbV"
    >
      Hey
       
      <span
        class="sc-gHmoSK kRelkX sc-gYEWkn iSSmXP"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-djMJHV upVlS"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;
